# blues

./: DOCS.md  README.md  pyproject.toml  your_program.sh
.codecrafters/: run.sh
.github/workflows/: python-publish.yml
app/: main.py
app/specs/: SET.md
app/tests/: main.py
blues/: __init__.py  blues_async_client.py  blues_cli_client.py  blues_client_base.py  blues_client_config.py  blues_server.py  blues_server_config.py  bluessp.py  constants.py  main.py  utils.py
tests/: manual.py  test_blues_server.py  test_bluessp.py  utils.py
