[project]
name = "blues"
version = "0.1.1"
requires-python = ">=3.14"

dependencies = [
    "typer>=0.24.2",
]

authors = [
  { name="Chaitanya Mittal", email="hello@chtnnhfoundation.org" },
]

description = "single-threaded redis (subset) in async python3"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/chtnnh/blues"
Issues = "https://github.com/chtnnh/blues/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "hypothesis>=6.151.14",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
